removed leading slash from src

--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
                 <h3 class="footer-subtopic">About Ozar</h3>
                 <a href="#" class="image featured">
                     <picture>
-                        <source type="image/webp" srcset="/res/ozar-infographics.webp">
-                        <source type="image/jpeg" srcset="/res/ozar-infographics.jpg">
-                        <img src="/res/ozar-infographics.jpg" alt="Photo of computer in Ozar Office" width="750"
+                        <source type="image/webp" srcset="res/ozar-infographics.webp">
+                        <source type="image/jpeg" srcset="res/ozar-infographics.jpg">
+                        <img src="res/ozar-infographics.jpg" alt="Photo of computer in Ozar Office" width="750"
                              height="360" style="margin-bottom: 1em">
                     </picture>
                 </a>
@@ -481,7 +481,7 @@
     </section>
 </footer>
 <!-- Minimal theme switcher -->
-<script src="/betik/minimal-theme-switcher.js"></script>
+<script src="betik/minimal-theme-switcher.js"></script>
 
 <script type="module">
 
