modified base URI for the stylesheets to conform GitHub's URL mechanism

--- a/about/index.html
+++ b/about/index.html
@@ -47,8 +47,8 @@
     <link rel="canonical" href="https://www.ozar.net/about">
     <link rel="alternate" hreflang="tr" href="https://www.ozar.net/about/tr/about">
 
-    <link rel="stylesheet" href="../stil/pico.css">
-    <link rel="stylesheet" href="../stil/ozel.css?v=1712487429"/>
+    <link rel="stylesheet" href="/ozarnetstaticweb/stil/pico.css">
+    <link rel="stylesheet" href="../ozarnetstaticweb/stil/ozel.css?v=1712487429"/>
 
     <!-- Render additional css -->
 
