corrected more res URIs

--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
     <link rel="alternate" hreflang="tr" href="https://www.ozar.net/about/tr/about">
 
     <link rel="stylesheet" href="/ozarnetstaticweb/stil/pico.css">
-    <link rel="stylesheet" href="../ozarnetstaticweb/stil/ozel.css?v=1712487430"/>
+    <link rel="stylesheet" href="../stil/ozel.css?v=1712487430"/>
 
     <!-- Render additional css -->
 
