corrected further img srcs

--- a/products/index.html
+++ b/products/index.html
@@ -279,7 +279,7 @@
                 <article class="first">
                     <header>
                         <a class="section-title" href="#CIWizSection" title="CodeIgniter Wizard product info">
-                            <img src="https://www.ozar.net/products/medya/res/CIWiz128.png"
+                            <img src="/ozarnetstaticweb/medya/res/CIWiz128.png"
                                  alt="CodeIgniter Wizard logo" width="128" height="128"/>
                             <h2>CodeIgniter Wizard</h2>
                         </a>
@@ -307,7 +307,7 @@
                     <header>
                         <a class="section-title"  href="/ozarnetstaticweb/products/parallel-search"
                            title="Parallel Search Deluxe Product Info">
-                            <img src="https://www.ozar.net/products/medya/res/ParallelSearch128.png"
+                            <img src="/ozarnetstaticweb/medya/res/ParallelSearch128.png"
                                  alt="Parallel Search Deluxe logo" width="128" height="128"/>
                             <h2>Parallel Search Deluxe</h2>
                         </a>
@@ -341,7 +341,7 @@
                 <a class="section-title"  href="/ozarnetstaticweb/products/codeigniterwizard"
                    title="CodeIgniter Wizard Product Home Page">
 
-                    <img src="https://www.ozar.net/products/medya/res/codeigniter-wizard-logo-only-64.png"
+                    <img src="/ozarnetstaticweb/medya/res/codeigniter-wizard-logo-only-64.png"
                          alt="CodeIgniter Wizard icon"/>
                     <h2>CodeIgniter Wizard</h2>
                     <h3 style="font-weight: 400;">PHP MySQL CRUD Code Generator and Rapid Web App Development Tool for
@@ -545,7 +545,7 @@
                 <picture>
                     <source type="image/webp" srcset="/ozarnetstaticweb/medya/res/WebAppMadeWithCIWiz2onMacBook.webp">
                     <source type="image/jpeg" srcset="/ozarnetstaticweb/medya/res/WebAppMadeWithCIWiz2onMacBook.png">
-                    <img src="/ozarnetstaticweb/products/medya/res/WebAppMadeWithCIWiz2onMacBook.webp"
+                    <img src="/ozarnetstaticweb/medya/res/WebAppMadeWithCIWiz2onMacBook.webp"
                          alt="Screenshot of a Sample web application created with CodeIgniter Wizard" width="1262"
                          height="1141"/></picture>
             </a>
@@ -603,7 +603,7 @@
                                     srcset="/ozarnetstaticweb/medya/res/Image-upload-configuration-in-CodeIgniter-Wizard.webp">
                             <source type="image/jpeg"
                                     srcset="/ozarnetstaticweb/medya/res/Image-upload-configuration-in-CodeIgniter-Wizard.png">
-                            <img src="https://www.ozar.net/products/medya/res/Image-upload-configuration-in-CodeIgniter-Wizard.webp"
+                            <img src="/ozarnetstaticweb/medya/res/Image-upload-configuration-in-CodeIgniter-Wizard.webp"
                                  alt="Screenshot of a Sample web application created with CodeIgniter Wizard"
                                  width="1280" height="768"/></picture>
                     </a>
