made temporary omissions

--- a/products/index.html
+++ b/products/index.html
@@ -213,11 +213,7 @@
                     Products
                 </a>
             </li>
-            <li>
-                <a  href="/ozarnetstaticweb/books">
-                    Books
-                </a>
-            </li>
+
             <li>
                 <a  href="/ozarnetstaticweb/blog">
                     Blog
@@ -680,14 +676,11 @@
                     responsive out of the box! And so on...</p>
                 <footer style="text-align: center; margin-top: 2em; margin-bottom: -2em;" class="grid">
 
-                    <a  href="/ozarnetstaticweb/products/codeigniterwizard" title="CodeIgniter Wizard Product Home Page"
-                       role="button">Product Website »</a>
+
                     <a  href="/ozarnetstaticweb/products/codeigniterwizard/buy" title="CodeIgniter Wizard App Store Forwarder"
                        role="button"
-                       class="outline">Buy Now</a>
-                    <a  href="/ozarnetstaticweb/products/codeigniterwizard/docs" title="CodeIgniter Wizard Documentation" id="docs2"
-                       role="button"
-                       class="secondary">Docs »</a></li>
+                       class="outline">Buy Now on the Mac App Store</a>
+
 
                 </footer>
             </section>
