made more srcset base URL/URI fixes / corrections

--- a/tr/index.html
+++ b/tr/index.html
@@ -251,8 +251,8 @@ CodeIgniter Wizard creates Composer-based CI4 projects with the base framework l
                 <h3 class="footer-subtopic">Ozar Hakkında</h3>
                 <a href="#" class="image featured">
                     <picture>
-                        <source type="image/webp" srcset="/res/ozar-infographics.webp">
-                        <source type="image/jpeg" srcset="/res/ozar-infographics.jpg">
+                        <source type="image/webp" srcset="/ozarnetstaticweb/res/ozar-infographics.webp">
+                        <source type="image/jpeg" srcset="/ozarnetstaticweb/res/ozar-infographics.jpg">
                         <img src="/res/ozar-infographics.jpg" alt="Photo of computer in Ozar Office" width="750"
                              height="360" style="margin-bottom: 1em">
                     </picture>
