made more URL/URI fixes / corrections for products/codeigniterwizard

--- a/products/index.html
+++ b/products/index.html
@@ -677,9 +677,13 @@
                 <footer style="text-align: center; margin-top: 2em; margin-bottom: -2em;" class="grid">
 
 
-                    <a  href="/ozarnetstaticweb/products/codeigniterwizard/buy" title="CodeIgniter Wizard App Store Forwarder"
+                    <a href="/ozarnetstaticweb/products/codeigniterwizard" title="CodeIgniter Wizard Product Home Page"
+                       role="button">Product Website »</a>
+                    <a href="/ozarnetstaticweb/products/codeigniterwizard/buy" title="CodeIgniter Wizard App Store Forwarder" role="button"
+                       class="outline">Buy Now</a>
+                    <a href="/ozarnetstaticweb/products/codeigniterwizard/docs" title="CodeIgniter Wizard Documentation" id="docs2"
                        role="button"
-                       class="outline">Buy Now on the Mac App Store</a>
+                       class="secondary">Docs »</a>
 
 
                 </footer>
