made even more URL/URI fixes / corrections for products/codeigniterwizard

--- a/products/codeigniterwizard/buy/index.html
+++ b/products/codeigniterwizard/buy/index.html
@@ -181,7 +181,7 @@
 
 <!--============= Banner Section Starts Here =============-->
 <section class="app-download-section" data-layout="webLandingLayout">
-    <div class="app-bg bg_img" data-background="/ciwres/sub/app-bg.png">
+    <div class="app-bg bg_img" data-background="/ozarnetstaticweb/ciwres/sub/app-bg.png">
     </div>
     <div class="oh app-download">
         <div class="container">
@@ -228,7 +228,7 @@
 <!--============= BEGIN Questions Still =============-->
 <section class="trial-section padding-bottom">
     <div class="container">
-        <div class="trial-wrapper padding-top padding-bottom bg_img style-three" data-background="/ciwres/sub/boxbg.png">
+        <div class="trial-wrapper padding-top padding-bottom bg_img style-three" data-background="/ozarnetstaticweb/ciwres/sub/boxbg.png">
             <div class="trial-content cl-white">
                 <h3 class="title m-0">Have Questions?</h3>
             </div>
@@ -243,7 +243,7 @@
 
 
 <!--============= BEGIN Footer =============-->
-<footer class="footer-section bg_img" data-background="/ciwres/footer-bg.jpg">
+<footer class="footer-section bg_img" data-background="/ozarnetstaticweb/ciwres/footer-bg.jpg">
     <div class="container">
         <div class="footer-top padding-top padding-bottom">
             <div class="logo">
