--- a/products/codeigniterwizard/faq/index.html
+++ b/products/codeigniterwizard/faq/index.html
@@ -192,7 +192,7 @@
     <!--============= END Header Nav Section=============-->
 
 <!--============= BEGIN breadcrumbs Section =============-->
-<section class="page-header bg_img" data-background="/ciwres/page-header.png" data-layout="faqLayout">
+<section class="page-header bg_img" data-background="/ozarnetstaticweb/ciwres/page-header.png" data-layout="faqLayout">
     <div class="bottom-shape d-none d-md-block">
         <img href="/ozarnetstaticweb/ciwres/stil/img/page-header.png" alt="css">
     </div>
@@ -230,7 +230,7 @@
         <div class="row justify-content-between">
             <div class="col-lg-4">
                 <aside class="sticky-menu">
-                    <div class="faq-menu bg_img mb-30" data-background="/ciwres/sub/faq-menu.png">
+                    <div class="faq-menu bg_img mb-30" data-background="/ozarnetstaticweb/ciwres/sub/faq-menu.png">
                                             <ul id="faq-menu">
                                             <li class="nav-item"><a class="nav-link" href="#intro">Introduction</a></li>
                                             <li class="nav-item"><a class="nav-link" href="#how">How CI Wizard Works</a></li>
@@ -539,7 +539,7 @@ customize to your own needs.</p>
 </section>
 
 <!--============= BEGIN Footer =============-->
-<footer class="footer-section bg_img" data-background="/ciwres/footer-bg.jpg">
+<footer class="footer-section bg_img" data-background="/ozarnetstaticweb/ciwres/footer-bg.jpg">
     <div class="container">
         <div class="footer-top padding-top padding-bottom">
             <div class="logo">
