--- a/products/codeigniterwizard/features/index.html
+++ b/products/codeigniterwizard/features/index.html
@@ -192,7 +192,7 @@
     <!--============= END Header Nav Section=============-->
 
 <!--============= BEGIN breadcrumbs Section =============-->
-<section class="page-header bg_img" data-background="/ciwres/page-header.png" data-layout="webLandingLayout">
+<section class="page-header bg_img" data-background="/ozarnetstaticweb/ciwres/page-header.png" data-layout="webLandingLayout">
     <div class="bottom-shape d-none d-md-block">
         <img href="/ozarnetstaticweb/ciwres/stil/img/page-header.png" alt="css">
     </div>
@@ -635,7 +635,7 @@
 
 <!--============= BEGIN New Features =============-->
 
-<section class="reliable-section padding-bottom padding-top bg_img pos-rel oh pb-xl-0 mt-10 mt-max-xl-0" data-background="/ciwres/fon/reliable-bg.jpg" id="how">
+<section class="reliable-section padding-bottom padding-top bg_img pos-rel oh pb-xl-0 mt-10 mt-max-xl-0" data-background="/ozarnetstaticweb/ciwres/fon/reliable-bg.jpg" id="how">
 
 <div class="reliable-top d-xl-block d-none"><img href="/ozarnetstaticweb/ciwres/stil/img/reliable-top.png" alt="css" /></div>
 
@@ -776,7 +776,7 @@
 <!--============= END App Store Link =============-->
 
 <!--============= BEGIN Footer =============-->
-<footer class="footer-section bg_img" data-background="/ciwres/footer-bg.jpg">
+<footer class="footer-section bg_img" data-background="/ozarnetstaticweb/ciwres/footer-bg.jpg">
     <div class="container">
         <div class="footer-top padding-top padding-bottom">
             <div class="logo">
