--- a/products/codeigniterwizard/intro/index.html
+++ b/products/codeigniterwizard/intro/index.html
@@ -195,7 +195,7 @@ You want to delegate your routine PHP boilerplate coding tasks to it.">
     <!--============= END Header Nav Section=============-->
 
 <!--============= Begin Main Header Section =============-->
-<section class="banner-15 bg_img oh pos-rel" data-background="/ciwres/introlandingres/banner-bg-15.jpg">
+<section class="banner-15 bg_img oh pos-rel" data-background="/ozarnetstaticweb/ciwres/introlandingres/banner-bg-15.jpg">
     <div class="bottom-shape d-none d-lg-block">
         <img href="/ozarnetstaticweb/ciwres/stil/img/banner-15-bottom.png" alt="kapak alt">
     </div>
@@ -359,7 +359,7 @@ You want to delegate your routine PHP boilerplate coding tasks to it.">
 
 <!--============= BEGIN DEMO / Sample App Section =============-->
 <div class="padding-top mt-120 mt-max-xl-0">
-    <div class="custom-plan bg_img oh" data-background="/ciwres/fon/line-bg.png">
+    <div class="custom-plan bg_img oh" data-background="/ozarnetstaticweb/ciwres/fon/line-bg.png">
         <div class="container">
             <div class="custom-wrapper">
                 <span class="circle"></span>
@@ -424,7 +424,7 @@ You want to delegate your routine PHP boilerplate coding tasks to it.">
 
 
 <!--============= BEGIN Footer =============-->
-<footer class="footer-section bg_img" data-background="/ciwres/footer-bg.jpg">
+<footer class="footer-section bg_img" data-background="/ozarnetstaticweb/ciwres/footer-bg.jpg">
     <div class="container">
         <div class="footer-top padding-top padding-bottom">
             <div class="logo">
