--- a/products/codeigniterwizard/support/index.html
+++ b/products/codeigniterwizard/support/index.html
@@ -193,7 +193,7 @@
     <!--============= END Header Nav Section=============-->
 
     <!--============= BEGIN Header Section =============-->
-    <section class="page-header single-header bg_img oh" data-background="/ciwres/sub/page-header.png">
+    <section class="page-header single-header bg_img oh" data-background="/ozarnetstaticweb/ciwres/sub/page-header.png">
         <div class="bottom-shape d-none d-md-block">
             <img href="/ozarnetstaticweb/ciwres/sub/page-header-mask.png" alt="css">
         </div>
@@ -332,7 +332,7 @@
 
 
 <!--============= BEGIN Footer =============-->
-<footer class="footer-section bg_img" data-background="/ciwres/footer-bg.jpg">
+<footer class="footer-section bg_img" data-background="/ozarnetstaticweb/ciwres/footer-bg.jpg">
     <div class="container">
         <div class="footer-top padding-top padding-bottom">
             <div class="logo">
