--- a/products/codeigniterwizard/index.html
+++ b/products/codeigniterwizard/index.html
@@ -186,7 +186,7 @@
 <!--============= END Header Nav Section=============-->
 
 <!--============= BEGIN Hero =============-->
-<section class="banner-7 bg_img oh bottom_right" data-background="/ciwres/bgseven.jpg">
+<section class="banner-7 bg_img oh bottom_right" data-background="/ozarnetstaticweb/ciwres/bgseven.jpg">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6">
@@ -243,7 +243,7 @@
 <!--============= END About =============-->
 
 <!--============= BEGIN How It Works =============-->
-<section class="work-section padding-bottom bg_img mb-md-95 pb-md-0" data-background="/ciwres/work-bg.jpg" id="how">
+<section class="work-section padding-bottom bg_img mb-md-95 pb-md-0" data-background="/ozarnetstaticweb/ciwres/work-bg.jpg" id="how">
     <div class="oh padding-top pos-rel">
         <div class="top-shape d-none d-lg-block">
             <img src="/ozarnetstaticweb/ciwres/work-shape.png" alt="css">
@@ -364,7 +364,7 @@
 <!--============= END Featured Video  =============-->
 
 <!--============= BEGIN New Features =============-->
-<section class="reliable-section padding-bottom padding-top bg_img pos-rel oh pb-xl-0 mt-10 mt-max-xl-0" data-background="/ciwres/fon/reliable-bg.jpg" id="how">
+<section class="reliable-section padding-bottom padding-top bg_img pos-rel oh pb-xl-0 mt-10 mt-max-xl-0" data-background="/ozarnetstaticweb/ciwres/fon/reliable-bg.jpg" id="how">
     <div class="reliable-top d-xl-block d-none">
         <img src="/ozarnetstaticweb/ciwres/stil/img/reliable-top.png" alt="css">
     </div>
@@ -426,7 +426,7 @@
 
 
 <!--============= BEGIN Footer =============-->
-<footer class="footer-section bg_img" data-background="/ciwres/footer-bg.jpg">
+<footer class="footer-section bg_img" data-background="/ozarnetstaticweb/ciwres/footer-bg.jpg">
     <div class="container">
         <div class="footer-top padding-top padding-bottom">
             <div class="logo">
