--- a/products/codeigniterwizard/sample/index.html
+++ b/products/codeigniterwizard/sample/index.html
@@ -192,7 +192,7 @@
     <!--============= END Header Nav Section=============-->
 
 <!--============= BEGIN breadcrumbs Section =============-->
-<section class="page-header bg_img" data-background="/ciwres/page-header.png" data-layout="webLandingLayout">
+<section class="page-header bg_img" data-background="/ozarnetstaticweb/ciwres/page-header.png" data-layout="webLandingLayout">
     <div class="bottom-shape d-none d-md-block">
         <img href="/ozarnetstaticweb/ciwres/stil/img/page-header.png" alt="css">
     </div>
@@ -258,7 +258,7 @@
 </section>
 
 <!--============= BEGIN Footer =============-->
-<footer class="footer-section bg_img" data-background="/ciwres/footer-bg.jpg">
+<footer class="footer-section bg_img" data-background="/ozarnetstaticweb/ciwres/footer-bg.jpg">
     <div class="container">
         <div class="footer-top padding-top padding-bottom">
             <div class="logo">
