replaced contact form links with JotForm URL

--- a/about/index.html
+++ b/about/index.html
@@ -194,7 +194,7 @@
                 </a>
             </li>
             <li>
-                <a href="../contact">
+                <a href="https://form.jotform.com/240975408349971">
                     Contact
                 </a>
             </li>
