--- a/products/codeigniterwizard/index.html
+++ b/products/codeigniterwizard/index.html
@@ -112,7 +112,7 @@
     <div class="container">
         <div class="header-wrapper">
             <div class="logo">
-                <a href="/ozarnetstaticweb/ozarnetstaticweb/products/codeigniterwizard">
+                <a href="/ozarnetstaticweb/products/codeigniterwizard">
                     <img src="/ozarnetstaticweb/ciwres/CodeIgniterWizLogo.png" alt="CodeIgniter Wizard logo">
                 </a>
             </div>
@@ -135,25 +135,25 @@
                     <a href="#" title="About CodeIgniter Wizard">About</a>
                     <ul class="submenu">
                         <li>
-                            <a href="/ozarnetstaticweb/ozarnetstaticweb/products/codeigniterwizard/about" title="About CodeIgniter Wizard"> Product and Developer Overview</a>
+                            <a href="/ozarnetstaticweb/products/codeigniterwizard/about" title="About CodeIgniter Wizard"> Product and Developer Overview</a>
                         </li>
                         <li>
-                            <a href="/ozarnetstaticweb/ozarnetstaticweb/products/codeigniterwizard/faq" title="Frequently Asked Questions on CodeIgniter Wizard">F.A.Q.</a>
+                            <a href="/ozarnetstaticweb/products/codeigniterwizard/faq" title="Frequently Asked Questions on CodeIgniter Wizard">F.A.Q.</a>
                         </li>
                         <li>
-                            <a href="/ozarnetstaticweb/ozarnetstaticweb/products/codeigniterwizard/docs" title="CodeIgniter Wizard Documentation">Documentation</a>
+                            <a href="/ozarnetstaticweb/products/codeigniterwizard/docs" title="CodeIgniter Wizard Documentation">Documentation</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="/ozarnetstaticweb/ozarnetstaticweb/products/codeigniterwizard/features" title="CodeIgniter Wizard Features and Screenshots">Features</a>
+                    <a href="/ozarnetstaticweb/products/codeigniterwizard/features" title="CodeIgniter Wizard Features and Screenshots">Features</a>
                 </li>
 
                 <li>
                     <a href="#" title="Sample App Created with CodeIgniter Wizard">Sample App</a>
                     <ul class="submenu">
                         <li>
-                            <a href="/ozarnetstaticweb/ozarnetstaticweb/products/codeigniterwizard/sample" title="Learn about the sample web app created with CodeIgniter Wizard">Learn About It</a>
+                            <a href="/ozarnetstaticweb/products/codeigniterwizard/sample" title="Learn about the sample web app created with CodeIgniter Wizard">Learn About It</a>
                         </li>
                         <li>
                             <a href="https://github.com/ozarnet/ci4sampleapp/?ref=ciwiz" target="_blank" title="See the source code of the sample web app created with CodeIgniter Wizard">Get Source Code of the Previous Version</a>
@@ -161,10 +161,10 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="/ozarnetstaticweb/ozarnetstaticweb/blog" title="Read articles and tutorials from the Ozar Blog">Blog</a>
+                    <a href="/ozarnetstaticweb/blog" title="Read articles and tutorials from the Ozar Blog">Blog</a>
                 </li>
                 <li>
-                    <a href="/ozarnetstaticweb/ozarnetstaticweb/products/codeigniterwizard/support" title="Contact Support re:CodeIgniter Wizard">Support</a>
+                    <a href="https://form.jotform.com/240975408349971" title="Contact Support re:CodeIgniter Wizard">Support</a>
                 </li>
             </ul>
             <div class="header-bar d-lg-none">
@@ -174,7 +174,7 @@
             </div>
             <div class="header-right">
 
-                <a href="/ozarnetstaticweb/ozarnetstaticweb/products/codeigniterwizard/buy" class="header-button d-none d-sm-inline-block">Get the App</a>
+                <a href="/ozarnetstaticweb/products/codeigniterwizard/buy" class="header-button d-none d-sm-inline-block">Get the App</a>
 
             </div>
         </div>
