--- a/products/codeigniterwizard/support/index.html
+++ b/products/codeigniterwizard/support/index.html
@@ -213,7 +213,7 @@
             <div class="col-lg-7">
                 <div class="contact-wrapper">
                     <h4 class="title text-center mb-30">Get in Touch</h4>
-                                                            <p id="contactMotivation" class="contact-motivation">Fill out this form to get support from Ozar. If you have a non-CodeIgniter Wizard related inquiry, <a href="/ozarnetstaticweb/contact" title="Contact Ozar">contact Ozar here.</a></p>
+                                                            <p id="contactMotivation" class="contact-motivation">Fill out this form to get support from Ozar. If you have a non-CodeIgniter Wizard related inquiry, <a href="https://form.jotform.com/240975408349971" title="Contact Ozar">contact Ozar here.</a></p>
                     <p class="contact-motivation">(Only the fields marked with an asterisk (*) are mandatory.)</p>
                     
                     <form class="contact-form" id="contact_form">
