--- a/products/parallel-search/index.html
+++ b/products/parallel-search/index.html
@@ -199,7 +199,7 @@
 
         <ul id="logo-container">
             <li id="ozarLogoHeading" class="logo">
-                <a href="/ozarnetstaticweb/ozarnetstaticweb/" class="contrast" title="Ozar Home Page"><span>Ozar</span></a>
+                <a href="/ozarnetstaticweb/" class="contrast" title="Ozar Home Page"><span>Ozar</span></a>
             </li>
         </ul>
 
@@ -211,28 +211,28 @@
 
         <ul id="nav-links">
             <li>
-                <a href="/ozarnetstaticweb/ozarnetstaticweb/">
+                <a href="/ozarnetstaticweb/">
                     Home
                 </a>
             </li>
             <li>
-                <a href="/ozarnetstaticweb/ozarnetstaticweb/about">
+                <a href="/ozarnetstaticweb/about">
                     About
                 </a>
             </li>
             <li>
-                <a href="/ozarnetstaticweb/ozarnetstaticweb/products">
+                <a href="/ozarnetstaticweb/products">
                     Products
                 </a>
             </li>
 
             <li>
-                <a href="/ozarnetstaticweb/ozarnetstaticweb/blog">
+                <a href="/ozarnetstaticweb/blog">
                     Blog
                 </a>
             </li>
             <li>
-                <a href="/ozarnetstaticweb/ozarnetstaticweb/contact">
+                <a href="/ozarnetstaticweb/contact">
                     Contact
                 </a>
             </li>
@@ -245,7 +245,7 @@
                             English
                         </li>
                         <li>
-                            <a href="/ozarnetstaticweb/ozarnetstaticweb/tr/products/parallel-search"
+                            <a href="/ozarnetstaticweb/tr/products/parallel-search"
                                title="view_this_page_inTürkçe ">
                                 Türkçe </a>
                         </li>
