--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </a>
             </li>
             <li>
-                <a href="contact">
+                <a href="https://form.jotform.com/240975408349971">
                     Contact
                 </a>
             </li>
