switched to CDN for jQuery

--- a/products/codeigniterwizard/about/index.html
+++ b/products/codeigniterwizard/about/index.html
@@ -273,7 +273,8 @@
     </div>
 </footer>
 <!--============= END Footer =============-->
-<script href="/ozarnetstaticweb/ciwres/betik/jquery-3.3.1.min.js" defer></script>
+<!--<script href="/ozarnetstaticweb/ciwres/betik/jquery-3.3.1.min.js" defer></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha512-+NqPlbbtM1QqiK8ZAo4Yrj2c4lNQoGv8P79DPtKzj++l5jnN39rHA/xsqn8zE9l0uSoxaCdrOgFs6yjyfbBxSg==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 <script href="/ozarnetstaticweb/ciwres/betik/modernizr-3.6.0.min.js" defer></script>
 <script href="/ozarnetstaticweb/ciwres/betik/plugins.js" defer></script>
 <script href="/ozarnetstaticweb/ciwres/betik/bootstrap.min.js" defer></script>
