fixed more broken URLs

--- a/terms/index.html
+++ b/terms/index.html
@@ -9,12 +9,12 @@
     <link rel="author" href="https://www.ozar.net">
     <link rel="publisher" href="Ozar"/>
 
-        <meta itemprop="name" content="Ozar.net Terms of Service and Use">
+    <meta itemprop="name" content="Ozar.net Terms of Service and Use">
     <meta itemprop="description" content="This page constitutes the Terms and Conditions of Use (the "Terms of Use") of the Ozar.net web site">
     <meta itemprop="image" content="https://www.ozar.net/terms/res/ozar-logo-header.jpg">
 
 
-        <meta property="og:locale" content="en"/>
+    <meta property="og:locale" content="en"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Ozar.net Terms of Service and Use"/>
     <meta property="og:description" content="This page constitutes the Terms and Conditions of Use (the "Terms of Use") of the Ozar.net web site"/>
@@ -24,7 +24,7 @@
 
     <meta property="og:image" content="https://www.ozar.net/terms/res/industry-3087393_1920.jpg"/>
 
-        <meta name="twitter:card" content="This page constitutes the Terms and Conditions of Use (the "Terms of Use") of the Ozar.net web site">
+    <meta name="twitter:card" content="This page constitutes the Terms and Conditions of Use (the "Terms of Use") of the Ozar.net web site">
     <meta name="twitter:image" content="https://www.ozar.net/terms/res/industry-3087393_1920.jpg">
     <meta name="twitter:domain" content="ozar.net">
     <meta name="twitter:site" content="@ozarnet">
@@ -249,7 +249,7 @@ These terms and conditions and the relationship between you and Ozar shall be go
                 <h3 class="footer-subtopic">Related Websites</h3>
 
                 <ul class="divided">
-                    <li><a href="https://www.ozar.net/products/codeigniterwizard/?ref=tld">CodeIgniter Wizard's Dedicated
+                    <li><a href="https://gosocial2.github.io/ozarnetstaticweb/products/codeigniterwizard/?ref=tld">CodeIgniter Wizard's Dedicated
                             Website</a></li>
                     <li><a href="https://gozmosis.blogspot.com">GOZmosis Blog</a></li>
 
@@ -379,7 +379,7 @@ These terms and conditions and the relationship between you and Ozar shall be go
         const htmlElement = document.querySelector('html');
         if (!webpSupported) {
 
-            const imageUrl = htmlElement && htmlElement.getAttribute('data-theme') === 'light' ? '/res/pexels-bongkarn-thanyakij-3759098.jpg' : '/res/pexels-bongkarn-thanyakij-darker.jpg';
+            const imageUrl = htmlElement && htmlElement.getAttribute('data-theme') === 'light' ? '/ozarnetstaticweb/res/pexels-bongkarn-thanyakij-3759098.jpg' : '/ozarnetstaticweb/res/pexels-bongkarn-thanyakij-darker.jpg';
             /*
             if (htmlElement && htmlElement.getAttribute('data-theme') === 'light') {
                 imageUrl = '/res/pexels-bongkarn-thanyakij-3759098.jpg';
