--- a/about/index.html
+++ b/about/index.html
@@ -367,7 +367,7 @@
                 <h3 class="footer-subtopic">Related Websites</h3>
 
                 <ul class="divided">
-                    <li><a href="https://www.ozar.net/products/codeigniterwizard/?ref=tld">CodeIgniter Wizard's
+                    <li><a href="https://gosocial2.github.io/ozarnetstaticweb/products/codeigniterwizard/?ref=tld">CodeIgniter Wizard's
                         Dedicated
                         Website</a></li>
                     <li><a href="https://gozmosis.blogspot.com">GOZmosis Blog</a></li>
