--- a/tr/contact/index.html
+++ b/tr/contact/index.html
@@ -287,7 +287,7 @@
                 <h3 class="footer-subtopic">İlgili Web Siteleri</h3>
 
                 <ul class="divided">
-                    <li><a href="https://www.ozar.net/products/codeigniterwizard/?ref=tld">CodeIgniter Wizard'ın Kendi Web Sitesi</a></li>
+                    <li><a href="https://gosocial2.github.io/ozarnetstaticweb/products/codeigniterwizard/?ref=tld">CodeIgniter Wizard'ın Kendi Web Sitesi</a></li>
                     <li><a href="https://gozmosis.blogspot.com">GOZmosis Blog</a></li>
 
                                     </ul>
@@ -654,7 +654,7 @@
         const htmlElement = document.querySelector('html');
         if (!webpSupported) {
 
-            const imageUrl = htmlElement && htmlElement.getAttribute('data-theme') === 'light' ? '/res/pexels-bongkarn-thanyakij-3759098.jpg' : '/res/pexels-bongkarn-thanyakij-darker.jpg';
+            const imageUrl = htmlElement && htmlElement.getAttribute('data-theme') === 'light' ? '/ozarnetstaticweb/res/pexels-bongkarn-thanyakij-3759098.jpg' : '/ozarnetstaticweb/res/pexels-bongkarn-thanyakij-darker.jpg';
             /*
             if (htmlElement && htmlElement.getAttribute('data-theme') === 'light') {
                 imageUrl = '/res/pexels-bongkarn-thanyakij-3759098.jpg';
