--- a/tr/contact/index.html
+++ b/tr/contact/index.html
@@ -119,7 +119,7 @@
                 </a>
             </li>
             <li>
-                <a href="/ozarnetstaticweb/tr/contact">
+                <a href="https://form.jotform.com/240975408349971">
                     İletişim
                 </a>
             </li>
